[package]
name = "ebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7", features = ["im"]}
serde = { version = "1.0", features = ["derive"] }
zip = "0.6.2"
walkdir = "2.3.2"
wintrap = "0.3.1"
alphanumeric-sort = "1.4.4"
winit = "0.27.4"
wmctrl = "0.1.8"
serde_json = "1.0"
epub = "1.2.2"
imagesize = "0.10.0"
voca_rs = "1.14.0"
image = "0.24.3"
native-dialog = "0.6.3"
im = { version = "*", features = ["proptest", "serde"] }